documentation BP and resnet and Unet

--- a/Documentation/doc.tex
+++ b/Documentation/doc.tex
@@ -244,6 +244,16 @@ CycleGAN用于解决在两个域之间相互转换的问题，正如其名字所
 
 实际上，这相当于将学习的目标从被提取的特征本身，变为了被提取特征与输入值的差，正因此，输出信息才会被称为“残差”。在进行反向梯度传播时，这一网络只有在极少情况下才会造成残差项与恒等项的梯度相同（恒等项梯度仅由激活函数决定，与一个常数项类似），反向传播梯度消失的情况。因此理论上，如果网络已经到达最优，继续加深网络，残差项的影响将会变为0，仅剩恒等项。即深度过高时，网络的结构相当于保持不变，仍然处于最优状态。
 
+除了ResNet以外，还有一个常用模型，这就是U-Net模型。该模型结构如下所示：
+
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[width=0.8\textwidth]{assets/10}
+	\caption{U-net模型，前半部分被称为下采样，后半部分被称为上采样}
+\end{figure}
+
+U-net模型中的网络是对称的结构，将第i层的输出加入到倒数第i层的输入中。这一模型融合了不同尺度的特征，同时能保证上采样恢复的特征不会过于粗糙。
+
 \subsection{结果如何？}
 
 \subsection{CycleGAN的问题}
@@ -264,7 +274,7 @@ CycleGAN用于解决在两个域之间相互转换的问题，正如其名字所
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=0.8\textwidth]{assets/10}
+	\includegraphics[width=0.8\textwidth]{assets/11}
 	\caption{}
 \end{figure}
 因此，在隐空间上进行插值时，线性函数效果不佳，需要一个非线性的函数。同时，CycleGAN中低效的问题仍然无法解决。
@@ -281,7 +291,7 @@ CycleGAN用于解决在两个域之间相互转换的问题，正如其名字所
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=0.8\textwidth]{assets/11}
+	\includegraphics[width=0.8\textwidth]{assets/12}
 	\caption{}
 \end{figure}
 训练时，读入两组图片$\mathrm Im_a$、$\mathrm Im_b$和它们自身的一些属性$\mathrm z_a$、$\mathrm z_b$。图片首先通过提取特征的网络$\MC E$，得到对应的特征矩阵(将起始图片和目标图片的特征分别记为$\mathrm f_a$和$\mathrm f_b$)。
@@ -346,13 +356,19 @@ $$\MC L_{\MC I} = \lambda_{\mathrm GAN_{\MC I}}\MC L_{\mathrm GAN_{\MC E,I}} + \
 
 过程中引入的网络$\MC A'(\cdot)$的更新方法如公式4.8所示。
 
+\subsection{其它技巧}
+
+注意到训练的主要目标是获得一个较好的插值函数，因此我们的判别器被用于判定插值的结果，而非翻译特征后输出的图片。而$\MC A'(\cdot)$同样是用于计算插值后结果与目标属性之间误差的交叉熵。因此，这两个网络具有一定的相似性。为了加快模型的训练速度，我们令$\MC A'(\cdot)$与$\MC Dis$的前几层共用，只在最后一层有所区别。
+
 \subsection{最终成果}
 
 \subsection{问题与改进}
 
-在训练过程中，我们向测试集中加入了一些额外的图片，发现在训练相同时间时的效果远弱于数据集中自带的测试集。我们认为，这是由于数据集中的头像位置几乎重合，因此我们加入的图片即使稍有位置的差异，也会造成效果不佳的问题。于是，我们在训练过程中，手动为图像增加了位置的变化等干扰，得到了较好的结果。
+在训练过程中，我们向测试集中加入了一些额外的图片，发现在训练相同时间时的效果远弱于数据集中自带的测试集。我们认为，这是由于数据集中的头像位置几乎重合，因此我们加入的图片即使稍有位置的差异，也会造成效果不佳的问题。于是我们在训练过程中，手动为图像增加了位置的变化等干扰。
 
-此外，人脸本身具有较好的连续性，但很多数据集并没有这一优势。因此，当我们将这一模型应用于一些图像变化连续性弱的领域时，得到的结果并不令人满意，这是这一网络没有考虑到的问题。
+此外，人脸及其表情本身具有较好的连续性，但很多数据集并没有这一优势。因此，当我们将这一模型应用于一些图像变化连续性弱的领域时，得到的结果并不令人满意，这是这一网络没有考虑到的问题。
+
+最终训练得到的模型中，输入图片背景为白色时，输出图片背景会变灰。我们认为这可能是由于网络的层次过深，导致提取与翻译特征中每个点都与整张图片中大部分都相关，从而让原本为白色的部分也受到了其余位置的颜色的影响。
 
 \section{总结}
 
